--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
             <div class="col-md-4">
                 <i class="fa fa-wordpress fa-5x"></i>
-                <h3 class="heading">Wordpress development</h3>
+                <h3 class="heading">Wordpress</h3>
                 <p>Wordpress is unarguably the best Content Management System.<br>It is an easy way for you to edit your website without any code.</p>
             </div>
             <div class="col-md-4">
