--- a/index.html
+++ b/index.html
@@ -43,15 +43,19 @@
             <div class="collapse navbar-collapse navigation-text" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active">
-                        <a href="#">Design<span class="sr-only">(current)</span></a>
+                        <a href="#">Consulting<span class="sr-only">(current)</span></a>
                     </li>
 
                     <li>
-                        <a href="#">Development</a>
+                        <a href="#">IT and Security</a>
                     </li>
 
                     <li>
-                        <a href="#">Marketing</a>
+                        <a href="#">Training</a>
+                    </li>
+
+                    <li>
+                      <a href="#">Cloud computing</a>
                     </li>
                 </ul>
 
