--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta charset="utf-8">
     <title>Page under renovation</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <style></style>
+    <style>
+
+    </style>
 </head>
 
 <body>
     <div class="row">
-        <div class="span12">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
             <header>We are working to bring you a better user experience</header>
             <p>If you need to contact us please do not hesiate to use the following info:</p>
             <ul>
@@ -21,6 +24,7 @@
                 <div>thanks</div>
             </p>
         </div>
+        <div class="col-md-3"></div>
     </div>
 </body>
 
