--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="row">
-        <div class="col-md-3"></div>
+        <div class="col-md-3">hello</div>
         <div class="col-md-6">
             <header>We are working to bring you a better user experience</header>
             <p>If you need to contact us please do not hesiate to use the following info:</p>
@@ -24,7 +24,7 @@
                 <div>thanks</div>
             </p>
         </div>
-        <div class="col-md-3"></div>
+        <div class="col-md-3">hello</div>
     </div>
 </body>
 
