--- a/index.html
+++ b/index.html
@@ -6,7 +6,26 @@
     <title>Page under renovation</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <style>
-
+        body {
+            text-align: center;
+            background-image: url("/img/temporary background.jpg");
+            background-position: right top;
+            background-repeat: no-repeat;
+            -webkit-filter: blur(10px):
+        }
+        header {
+          font-size: 3em;
+          font-family: Trebuchet;
+          color: black;
+        }
+        p, ul {
+          font-family: Trebuchet;
+          font-size: 1em;
+          list-style-type: none;
+        }
+        li {
+          text-decoration: underline;
+        }
     </style>
 </head>
 
