--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>Page under renovation</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body {
+        html body {
             text-align: center;
             background-image: url("/img/temporary background.jpg");
-            background-position: right top;
-            background-repeat: no-repeat;
-            -webkit-filter: blur(10px):
+            filter: blur(10px) brightness(0.5);
+            -webkit-filter: blur(10px) brightness(0.5):
         }
         header {
           font-size: 3em;
@@ -23,6 +22,9 @@
           font-size: 1em;
           list-style-type: none;
         }
+        .row {
+          font-family: Trebuchet;
+        }
         li {
           text-decoration: underline;
         }
@@ -31,7 +33,7 @@
 
 <body>
     <div class="row">
-        <div class="col-md-3">hello</div>
+        <div class="col-md-3"></div>
         <div class="col-md-6">
             <header>We are working to bring you a better user experience</header>
             <p>If you need to contact us please do not hesiate to use the following info:</p>
@@ -43,7 +45,7 @@
                 <div>thanks</div>
             </p>
         </div>
-        <div class="col-md-3">hello</div>
+        <div class="col-md-3"></div>
     </div>
 </body>
 
