--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         html body {
             text-align: center;
             background-image: url("/img/temporary background.jpg");
+            background-repeat: no-repeat;
             filter: blur(10px) brightness(0.5);
             -webkit-filter: blur(10px) brightness(0.5):
         }
