--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <title>Page under renovation</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <style>
-        html body {
+        .wrap {
             text-align: center;
             background-image: url("/img/temporary background.jpg");
             background-repeat: no-repeat;
             filter: blur(10px) brightness(0.5);
-            -webkit-filter: blur(10px) brightness(0.5):
         }
         header {
           font-size: 3em;
-          font-family: Trebuchet;
-          color: black;
+          font-family: Arial;
+          color: white;
         }
         p, ul {
           font-family: Trebuchet;
@@ -33,7 +32,7 @@
 </head>
 
 <body>
-    <div class="row">
+    <div class="warp row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
             <header>We are working to bring you a better user experience</header>
