--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Page under renovation</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <style>
-        .wrap {
-            text-align: center;
+        .text {
+          text-align: center;
+        }
+        body {
             background-image: url("/img/temporary background.jpg");
             background-repeat: no-repeat;
             filter: blur(10px) brightness(0.5);
@@ -34,7 +36,7 @@
 <body>
     <div class="warp row">
         <div class="col-md-3"></div>
-        <div class="col-md-6">
+        <div class="text col-md-6">
             <header>We are working to bring you a better user experience</header>
             <p>If you need to contact us please do not hesiate to use the following info:</p>
             <ul>
